<resources>
    <string name="app_name">PersonalList2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="company">Company</string>
    <string name="add">Add</string>
    <string name="show_all">Show all</string>
    <string name="search_by_name">Search by name</string>
</resources>
